--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
         crossorigin="anonymous">
+  <link rel="stylesheet"
+        href="style.css">
 
   <title>Interior Consultant</title>
 </head>
@@ -27,8 +29,10 @@
 <body>
 
   <div class="navbar">
-    <div class="project-title">This Interior</div>
-    <ul>
+    <div class="project-title">
+      This Interior
+    </div>
+    <ul class="nav-items">
       <li>Home</li>
       <li>Collection</li>
       <li>About</li>
@@ -38,9 +42,31 @@
 
   <div class="container">
     <div class="text-container">
-      <div class="title"></div>
-      <div class="description"></div>
-      <a href="#">Read more <i class="fas fa-arrow-right"></i></a>
+      <div class="title">Modern interior</div>
+      <div class="description">A full-service residential & commercial interior design and staging
+        company offering professional organizing & eco-services.
+      </div>
+      <a href="#">Read more &nbsp; <i class="fas fa-arrow-right"></i></a>
+    </div>
+
+    <div class="image-container">
+      <img src="./photo1.png"
+           alt="Interior Design">
+    </div>
+  </div>
+
+  <div class="designer-card">
+    <div class="profile-card">
+      <img src="./photo2.png"
+           alt="Designer Image">
+      <div class="profile-text">
+        <div class="profile-name">Aliza Webber</div>
+        <div class="profile-role">Interior Designer</div>
+      </div>
+    </div>
+    <div class="profile-description">
+      <div class="description-text">Designed in 2020 by</div>
+      <div class="description-name">Aliza Webber</div>
     </div>
   </div>
 
