added media queries

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   maximum-scale=5" />
 
   <link rel="icon"
-        href="devchallenges.png" />
+        href="iicon.png" />
 
   <link rel="shortcut icon"
         type="image/x-icon"
@@ -69,6 +69,10 @@
       <div class="description-name">Aliza Webber</div>
     </div>
   </div>
+
+  <footer>
+    Created by Joseph Evangelista
+  </footer>
 
 </body>
 
