--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   maximum-scale=5" />
 
   <link rel="icon"
-        href="iicon.png" />
+        href="icicon1.png" />
 
   <link rel="shortcut icon"
         type="image/x-icon"
@@ -32,6 +32,7 @@
     <div class="project-title">
       This Interior
     </div>
+    <div class="hamburger open"> &#9776;</div>
     <ul class="nav-items">
       <li>Home</li>
       <li>Collection</li>
@@ -74,6 +75,7 @@
     Created by Joseph Evangelista
   </footer>
 
+  <script src="app.js"></script>
 </body>
 
 </html>
